[package]
name = "pyo3-fetch-db"
version = "0.1.0"
edition = "2018"

[lib]
name = "pyo3_fetch_db"
crate-type = ["cdylib"]

[dependencies]
tokio = "1.6.0"

[dependencies.pyo3-asyncio]
version = "0.13.3"
features = ["tokio-runtime"]

[dependencies.pyo3]
version = "0.13.2"
features = ["extension-module"]
