[package]
name = "utils"
version = "0.1.0"
authors = ["Aleksei Piskunov <piskunov.alesha@gmail.com>"]
edition = "2018"

[lib]
name = "utils"
crate-type = ["cdylib"]

[dependencies]
num-bigint = "0.3.1"
num-traits = "0.2.14"

[dependencies.pyo3]
git = "https://github.com/davidhewitt/pyo3/"
branch = "fix-multiple-kw-only-arg"
features = ["extension-module"]
